--- a/form.css
+++ b/form.css
@@ -9,3 +9,16 @@ form {
   flex: 1 1 auto;
   margin: 4rem 0;
 }
+.form-container {
+  min-width: 600px;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 2rem;
+}
