--- a/style.css
+++ b/style.css
@@ -256,11 +256,15 @@ main .section-container .name #mitchell{
   top: -2rem;
   position: relative;
 }
+
+.name-main {
+  height: 25rem;
+}
 #l-letter {
-  height: 196px;
+  height: 49%;
   position: relative;
   top: -16rem;
-  left: 11.5rem;
+  left: 7%;
 }
 
 main .dev-container {
@@ -689,7 +693,7 @@ h4 {
   #l-letter {
     height: 119px;
     position: relative;
-    top: -11.58rem;
+    top: -9.58rem;
     left: -0.2rem;
   }
   #web-dev {
@@ -801,7 +805,7 @@ h4 {
     margin: 0;
   }
   #abigail {
-    right: 2.57rem;
+    right: 1.9rem;
   }
   main .section-container .name #mitchell {
     left: -0.6rem;
@@ -811,7 +815,7 @@ h4 {
     height: 119px;
     position: relative;
     top: -9.58rem;
-    left: -1.5rem;
+    /* left: -1.5rem; */
   }
   #web-dev {
     bottom: 10.7rem;
