--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,9 @@ body {
   background-color: #dbdbdb;
   color: #ee6d56;
 }
-
+svg {
+  stroke-width: 2px;
+}
 .color-pink {
   background-color: #e6c1f0;
   color: #ee6d56;
@@ -36,8 +38,12 @@ body {
   stroke: #ebbcb7;
 }
 
+
 .section-container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 1;
 }
 
 /* CURSOR */
@@ -169,7 +175,7 @@ a:visited {
 .panel {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  flex: 1 1 auto;
 }
 #main-panel {
   margin-bottom: 35rem;
@@ -210,7 +216,6 @@ a:visited {
   top: -0.2rem;
 }
 .dev-container {
-  height: 30px;
   font-family: 'Karla', sans-serif;
   font-size: 1rem;
   font-weight: 800;
@@ -336,7 +341,6 @@ a:visited {
 }
 
 /* WORK */
-
 #work-panel {
   margin: 35rem 0;
   min-height: 270vh;
@@ -344,6 +348,9 @@ a:visited {
 }
 #header-work {
   width: fit-content;
+}
+.work-container-mobile {
+  display: none;
 }
 .main-selected-container {
   display: flex;
@@ -460,8 +467,9 @@ a:visited {
   padding: 5px;
   display: none;
 
-  animation: arrow 1s forwards ease-in-out;
+  animation: arrow 1s both ease-in-out;
 }
+
 
 #ccc-header {
   font-size: 4.14rem;
@@ -567,10 +575,162 @@ h4 {
 /* ////////////// */
 /* PHONES */
 @media only screen and (max-width: 600px) {
+  .section-container {
+    align-items: center;
+    align-content: center;
+    max-width: 370px;
+  }
+  .menu {
+    display: flex;
+    font-family: 'karla', sans-serif;
+    font-size: 1.3rem;
+    position: fixed;
+    top: 30px;
+    left: 40px;
+    padding: 5px;
+    border-style: solid;
+    border-width: 2px;
+    letter-spacing: 6px;
+  }
+  .menu .nav-menu-mobile {
+    float: left;
+    display: flex;
+    flex-direction: column;
+  }
+  .menu .nav-menu-mobile ul {
+    padding: 0;
+  }
+  .nav-menu {
+    display: none;
+  }
+
+  .nav-menu ul {
+    transform: none;
+  }
+  .am-nav {
+    top: 30px;
+    right: 40px;
+  }
+  .name {
+    font-size: 2.5rem;
+    max-width: 300px;
+    min-width: 300px;
+  }
+  .name-container {
+    max-width: 300px;
+    min-width: 300px;
+
+  }
+  #main-panel {
+    margin-top: 4rem;
+  }
+  #l-letter {
+    max-height: 114px;
+    height: 119px;
+    width: 12px;
+    max-width: 12px;
+  }
+  .hc-container {
+    flex-wrap: wrap;
+  }
+  #hello-section {
+    width: 100%;
+  }
+  #hello-text {
+    font-size: 2rem;
+  }
+  #create-span {
+    font-size: 1.5rem;
+  }
+  #hello-text {
+    float: right;
+  }
+
+  /* ABOUT */
+  .about,
+  #about-text,
+  #passionate-span {
+    max-width: 350px;
+  }
+  #extra-info-span {
+    font-size: 2rem;
+  }
+
+  #span-art, 
+  #span-design, 
+  #span-outdoors {
+    width: 100%;
+    font-size: 4rem;
+  }
+
+  /* WORK */
+  .work-container {
+    display: none;
+  }
+  .work-container-mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+  #selected-header{
+    font-size: 2rem;
+  }
+  #selected-p {
+    font-size: 1.5rem;
+  }
+  .skills-container li {
+    font-size: 1rem;
+  }
+  .project-container,
+  #ccc-header,
+  #cwo-header  {
+    font-size: 1.5rem;
+  }
+  #header-work, 
+  #selected-header, 
+  .main-selected-container, 
+  .work {
+    width: 350px;
+  }
+  #selected-header {
+    margin: 2rem 0;
+    width: fit-content;
+  }
+  .main-selected-container {
+    width: fit-content;
+  }
+  .project-h {
+    max-width: 350px;
+  }
+  .contact {
+    width: 100%;
+  }
+  #header-contact {
+    width: 100%;
+  }
+  #form-link,
+  #follow ul li {
+    font-size: 1rem;
+  }
 
 }
 
-
+@media only screen and (max-width: 350px) {
+  .section-container {
+    align-items: center;
+    align-content: center;
+    max-width: 300px;
+  }
+  .project-h {
+    max-width: 300px;
+  }
+  #form-link,
+  #follow ul li {
+    letter-spacing: 3px;
+  }
+}
 /* ANIMATIONS */
 
 @keyframes arrow {
@@ -583,8 +743,19 @@ h4 {
   100% {
     opacity: 1;
     border-radius: 100%;
-    background-color: #000;
     width: 10%;
-    transform: translateY(10%);
+    transform: translateY(40%);
+  }
+}
+
+@keyframes arrowOut {
+  0% {
+    opacity: 1;
+    border-radius: 100px;
+  }
+  100% {
+    opacity: 1;
+    border-radius: 100%;
+
   }
 }
