--- a/form.css
+++ b/form.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   box-sizing: border-box;
   font-family: 'Karla', sans-serif;
+  cursor: none;
 }
 html {
   display: flex;
@@ -16,9 +17,22 @@ html {
 .no-focus-outline button:focus {
   outline: none;
 }
+.cursor {
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  background-color: none;
+  position: fixed;
+  border-radius: 50%;
+  z-index: 999;
+  border: solid 1px;
+  border-color: rgb(238, 109, 86);
+}
+
 h1 {
   text-align: center;
-  margin-top: 4rem;
+  margin-top: 3.5rem;
   font-size: 3rem;
 }
 
@@ -26,7 +40,7 @@ form {
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  margin: 4rem 0;
+  margin: 2.5rem 0 4rem;
 }
 .form-container {
   min-width: 600px;
@@ -69,7 +83,7 @@ input {
 }
 
 textarea {
-  height: 200px;
+  height: 180px;
 }
 
 button {
@@ -82,9 +96,20 @@ button {
   background-color: transparent;
   letter-spacing: 4px;
 }
+button:hover {
+  background-color: #ee6d56;
+  color: #c6d6c9;
+}
 
 
 @media only screen and (max-width: 600px) {
+  .form-container {
+    min-width: 350px;
+    max-width: 350px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
   .form-container {
     min-width: 300px;
     max-width: 300px;
