--- a/form.css
+++ b/form.css
@@ -17,6 +17,20 @@ html {
 .no-focus-outline button:focus {
   outline: none;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid #c6d6c9;
+  -webkit-text-fill-color: #ee6d56;
+  -webkit-box-shadow: 0 0 0px 1000px #c6d6c9 inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
 .cursor {
   left: 0;
   top: 0;
@@ -83,7 +97,7 @@ input {
 }
 
 textarea {
-  height: 180px;
+  height: 100px;
 }
 
 button {
@@ -95,6 +109,7 @@ button {
   margin-top: 1rem;
   background-color: transparent;
   letter-spacing: 4px;
+  font-size: 1rem;
 }
 button:hover {
   background-color: #ee6d56;
